<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <group android:checkableBehavior="single" >

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard"
            android:textColor="#1E3A8A"
            />
        <item
            android:id="@+id/nav_devices"
            android:icon="@drawable/ic_devices"
            android:title="@string/Devices"
            android:textColor="#1E3A8A"
            />
        <item
            android:id="@+id/nav_devices_list"
            android:icon="@drawable/ic_devices"
            android:title="Application"
            android:textColor="#1E3A8A"
            />
        <item
            android:id="@+id/nav_configurations"
            android:icon="@drawable/ic_configurations"
            android:title="Configuration"
            android:textColor="#1E3A8A"
            />
        <item
            android:id="@+id/nav_logs"
            android:icon="@drawable/ic_remote_control"
            android:title="@string/Groupes"
            android:textColor="#1E3A8A"
            />
        <item
            android:id="@+id/nav_remote_control"
            android:icon="@drawable/ic_geozones"
            android:title="@string/Messages"
            android:textColor="#1E3A8A"
            />
        <item
            android:id="@+id/nav_audit"
            android:icon="@drawable/ic_logs"
            android:textColor="#1E3A8A"
            android:title="Audit Log" />




    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="Logout"
                android:textColor="#1E3A8A"
                />
        </menu>
    </item>
</menu>
